Addresses #3590. Please test !